# contactos_back_hex

./: Readme.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
contactos_back/: .env
contactos_back/adapters/database/: mysql.py
contactos_back/domain/: colectivo.py  database_interface.py
contactos_back/domain/actions/: get_all_colectivos.py
tests/: conftest.py
tests/adapters/database/: test_mysql.py
tests/domain/: test_colectivo.py
